[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findICE"
version = "0.1.0"
description = "ICEpicks – ICE Online Detainee Locator monitor"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
authors = [{ name = "ICEpicks", email = "licensing.icepicks@rqn.com" }]
keywords = ["ice", "detainee", "locator", "immigration", "advocacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "filelock>=3.0",
    "playwright>=1.42.0",
    "playwright-stealth>=1.0.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
findice = "findICE.cli:main"

[project.gui-scripts]
findice-bg = "findICE.cli:main_background"

[project.urls]
Homepage = "https://github.com/Redwood74/ICEpicks"
Repository = "https://github.com/Redwood74/ICEpicks"
"Bug Tracker" = "https://github.com/Redwood74/ICEpicks/issues"
Documentation = "https://github.com/Redwood74/ICEpicks#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
findICE = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -W error::DeprecationWarning"
markers = [
    "live: marks tests as requiring a live ICE site connection (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
